stg配置中， url改为生产地址

--- a/src/main/resources/application-stg.properties
+++ b/src/main/resources/application-stg.properties
@@ -74,14 +74,14 @@ ribbon.MaxAutoRetries=2
 
 #宝骏常量配置
 #根据id查地址url
-baojun.QUERY_ADDRESS_URL = http://120.78.149.117:8089/api/v2.2/receiver/queryReceiver
+baojun.QUERY_ADDRESS_URL = https://app2.baojunev.com/api/v2.2/receiver/queryReceiver
 #默认地址url
-baojun.DEFAULT_ADDRESS_URL = http://120.78.149.117:8089/api/v2.2/receiver/getDefaultReciver
+baojun.DEFAULT_ADDRESS_URL = https://app2.baojunev.com/api/v2.2/receiver/getDefaultReciver
 #地址列表url
-baojun.ADDRESS_LIST_URL = http://120.78.149.117:8089/api/v2.2/receiver/queryReceiverList
+baojun.ADDRESS_LIST_URL = https://app2.baojunev.com/api/v2.2/receiver/queryReceiverList
 #新增地址url
-baojun.ADD_ADDRESS_URL = http://120.78.149.117:8089/api/v2.2/receiver/addReceiver
+baojun.ADD_ADDRESS_URL = https://app2.baojunev.com/api/v2.2/receiver/addReceiver
 #修改地址url
-baojun.MODIFY_ADDRESS_URL = http://120.78.149.117:8089/api/v2.2/receiver/updateReceiver
+baojun.MODIFY_ADDRESS_URL = https://app2.baojunev.com/api/v2.2/receiver/updateReceiver
 #删除地址url
-baojun.DEL_ADDRESS_URL = http://120.78.149.117:8089/api/v2.2/receiver/deleteReceiver
+baojun.DEL_ADDRESS_URL = https://app2.baojunev.com/api/v2.2/receiver/deleteReceiver
